# orders_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  ORDERS_SERVICE_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  отчёт.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_optimize_orders_indexes.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  orders.py
app/core/: auth_cookies.py  config.py  cors.py  logging.py  rate_limit.py  security.py
app/db/: session.py
app/db/models/: __init__.py  order.py  user.py
app/integrations/: rabbit.py  redis.py
app/schemas/: auth.py  order.py
app/services/: cache.py  events.py  orders.py  users.py
consumer/: main.py
scripts/: wait_for_postgres.py
tests/: __init__.py  conftest.py  test_auth_cookies.py  test_auth_endpoints.py  test_cache.py  test_events.py  test_orders_endpoints.py  test_security.py
worker/: celery_app.py  tasks.py
